@@ -1,6 +1,7 @@
 package ru.liga.parcelloader.parsers;
 
 import ru.liga.parcelloader.models.Parcel;
+import ru.liga.parcelloader.models.Truck;
 import ru.liga.parcelloader.validators.ParcelFormValidator;
 import ru.liga.parcelloader.validators.Validator;
 
@@ -9,18 +10,26 @@ import java.io.FileReader;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class ParcelsTxtParser implements FileParser<List<Parcel>> {
     private final Validator<Parcel> parcelValidator;
 
+    /**
+     *
+     * @param parcelValidator репозиторий с правильными формами посылок,
+     *                        посылки с неправильными формами будут отброшены при парсинге
+     */
     public ParcelsTxtParser(Validator<Parcel> parcelValidator) {
         this.parcelValidator = parcelValidator;
     }
 
-    public ParcelsTxtParser() {
-        this(new ParcelFormValidator());
-    }
-
+    /**
+     *
+     * @param filePath путь к файлу, который нужно спарсить
+     * @return список посылок
+     * @throws IOException ошибка, возникшая при чтении файла
+     */
     @Override
     public List<Parcel> parse(String filePath) throws IOException {
         List<List<String>> potentialParcels = new ArrayList<>();
@@ -34,10 +43,11 @@ public class ParcelsTxtParser implements FileParser<List<Parcel>> {
             while ((line = br.readLine()) != null) {
                 line = line.replaceAll("[\\r\\n]", "");
 
-                if (line.isBlank())
+                if (line.isBlank()) {
                     potentialParcels.add(new ArrayList<>());
-                else
+                } else {
                     potentialParcels.get(potentialParcels.size() - 1).add(line);
+                }
             }
         }
 
@@ -45,6 +55,6 @@ public class ParcelsTxtParser implements FileParser<List<Parcel>> {
                 .stream()
                 .map(Parcel::new)
                 .filter(parcelValidator::isValid)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
